# backpack-modules

./: modules.cabal
app/: Main.hs
src/modules/: Monad.hsig
src/modules/Monad/: Combinators.hs
src/monads/Monad/: IO.hs  Maybe.hs
src/transformers/Monad/Trans/: Maybe.hs
